--- a/style.css
+++ b/style.css
@@ -47,3 +47,48 @@ body {
     text-decoration: none;
     color: #fff;
 }
+
+.section3 {
+    margin-top: 90px;
+    margin-bottom: 90px;
+
+}
+
+.clearfix img {
+    margin-left: 100px;
+    float: left;
+    margin-right: 35px;
+    margin-bottom: 10px;
+
+}
+
+.section3 h2 {
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 60px;
+    color: #0D0D0D;
+    margin-bottom: 60px;
+}
+
+.section3 p {
+    margin-bottom: 35px;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 28px;
+    color: #0D0D0D;
+}
+.footer {
+    margin-top: 140px;
+    background: #1C4179;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-div {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: #FFFFFF;
+}
